workloads/additional-app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: additional-app
  namespace: demo
  labels:
    app: additional-app-depl
spec:
  type: ClusterIP
  selector:
    app: additional-app-depl
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: load-balancer-example
    app: additional-app-depl
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.init: regex:^3.10.*
    fluxcd.io/tag.podinfod: semver:~3.1
  name: additional-app-depl
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: load-balancer-example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: load-balancer-example
        app: additional-app-depl
    spec:
      containers:
        - image: tutum/hello-world
          name: hello-world
          ports:
            - containerPort: 80
              protocol: TCP
