workloads/sample-app-depl.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: demo
  labels:
    app: sample-app-depl
spec:
  type: ClusterIP
  selector:
    app: sample-app-depl
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: load-balancer-example
    app: sample-app-depl
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.init: regex:^3.10.*
    fluxcd.io/tag.podinfod: semver:~3.1
  name: sample-app-depl
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: load-balancer-example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: load-balancer-example
        app: sample-app-depl
    spec:
      containers:
      - image: carinamarina/hello-world-app
        name: hello-world-cont
        ports:
        - containerPort: 8080
