workloads/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    fluxcd.io/automated: "true"
    fluxcd.io/tag.init: regex:^3.10.*
    fluxcd.io/tag.podinfod: semver:~3.1
spec:
  rules:
  - http:
      paths:
      - path: /pi
        backend:
          serviceName: podinfo
          servicePort: 9898
      - path: /hw
        backend:
          serviceName: sample-app
          servicePort: 8080
